# Fashion_App_Django

./: .dockerignore  .env  Dockerfile  PHASE_4_COMPLETE.md  README.md  db.sqlite3  docker-compose.yml  main.py  pyproject.toml  test_ai_integration.py  test_api.py  test_measurements_api.py  test_user_creation.py
ai_measurement_service/: .env  main.py  pyproject.toml  test_ai_service.py
ai_measurement_service/api/: __init__.py
ai_measurement_service/api/v1/: __init__.py  api.py
ai_measurement_service/api/v1/endpoints/: __init__.py  health.py  measurements.py
ai_measurement_service/core/: __init__.py  config.py  logging_config.py
ai_measurement_service/models/: __init__.py  schemas.py
ai_measurement_service/services/: __init__.py  body_measurement.py
fashion_app/: asgi.py  settings.py  urls.py  wsgi.py
measurements/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
measurements/migrations/: 0001_initial.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
